# rego_builder

./: .example.env  .gitignore  Dockerfile  README.md  auth.rego  data.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docs.md  main.py  pyproject.toml  rego_build_api.Example.rego  rego_build_api.Example2.rego  rego_build_api.abdulrahman.rego  requirements.txt
.github/workflows/: constraints.txt  docker-build.yml  main.yml
app/config/: config.py
app/database/: datasource_database.py  policy.py  policy_database.py
app/schemas/: data.py  policy_model.py  rules.py
app/server/: api.py  authenticate.py  authorize.py  github.py  login.py  policies.py  routes.py  user.py
app/server/auth/: authenticate.py  authorize.py  authorize_token.py  get_token.py
app/server/routes/: data.py  policies.py  policy.py  policy_routes.py  repo.py  user.py
app/server/services/: github.py  github_operations.py  gitlab.py
app/tests/: conftest.py  data.py  test_data.py  test_get_repo_and_data.py  test_policies.py
app/utils/: build_rego_file.py  commands.py  commands_map.py  map_commands.py  validate_rego.py  write_rego.py
rego_build_api/: example_json.py
rego_build_api/config/: config.py
rego_build_api/server/: github.py  main.py  models.py
rego_build_api/utils/: build_rego_file.py  commands.py  commands_map.py  write_rego.py
server/: api.py  github.py
sql/: create_database.sql  create_tables.sql
sql/data/postgres/base/1/: 2619
sql/data/postgres/base/13756/: pg_internal.init
sql/data/postgres/base/16384/: 1247  1249  1259  1259_fsm  1259_vm  13579  16388  16388_vm  16392  16393  16393_vm  16396  16396_vm  16400  16401  16401_vm  16405  16411  16411_vm  16416  16417  16417_vm  16421  16422  16422_vm  16427  16428  16428_vm  16431  (+138 more)
sql/data/postgres/global/: 1214  1214_vm  1232  1233  1260  1260_vm  1262  2671  2676  2677  pg_control  pg_internal.init
sql/data/postgres/pg_stat/: db_0.stat  db_13756.stat  db_16384.stat  global.stat
sql/data/postgres/pg_xact/: 0000
tests/: test_rego_build_api.py
utils/: commands.py  commands_map.py  write_rego.py
