[tool.poetry]
name = "rego_build_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
GitPython = "^3.1.27"
requests = "^2.27.1"
python-dotenv = "^0.20.0"
tinydb = "^4.7.0"
nox = "^2022.1.7"
OPA-python-client = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
