[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "rego_build_api"
version = "0.1.0"
description = "This API is responsible for converting JSON variables to REGO which in turn is used in application policy management."
authors = ["Abdulrahman Olamilekan <abdulrahmanolamilekan88@gmail.com>", "Abdulazeez Abdulazeez <youngestdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
GitPython = "^3.1.27"
python-dotenv = "^0.20.0"
tinydb = "^4.7.0"
nox = "^2022.1.7"
psycopg2 = "^2.9.3"
sqlparse = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests = "^2.27.1"
coverage = { version = "5.0.3", extras = ["toml"]}
black = "^19.10b0"
isort = { version = "^4.3.21", extras = ["pyproject"]}






[tool.black]
# https://github.com/psf/black
line-length = 88
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0


[tool.coverage]
# https://github.com/nedbat/coveragepy
    [tool.coverage.run]

    source = ["app"]
    branch = true
    omit = ['']

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]